--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,18 +1,42 @@
 <h2>Create an Author</h2>
 <%= form_tag authors_path, method: "post" do %>
-  <div class="field">
+  <% if @author.errors.any?%>
+    <div id="error_explanation">
+      <h2>There were some errors:</h2>
+      <ul>
+        <%@author.errors.full_messages.each do |message|%>
+
+          <li><%=message%></li>
+        <%end%>
+      </ul>
+    </div>
+  <%end%>
+
+  <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
     <%= label_tag "name", "Name" %>
+    <%if @author.errors.any?%>
+    <%= text_field_tag "name", @author.name %>
+    <%else%>
     <%= text_field_tag "name" %>
+    <%end%>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @author.errors[:email].any? %>">
     <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email" %>
+    <%if @author.errors.any?%>
+    <%= text_field_tag "email", @author.email %>
+    <%else%>
+    <%= text_field_tag "email", "Email" %>
+    <%end%>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @author.errors[:phone_number].any? %>">
     <%= label_tag "phone_number", "Phone Number" %>
-    <%= text_field_tag "phone_number" %>
+    <%if @author.errors.any?%>
+    <%= text_field_tag "phone_number", @author.phone_number %>
+    <%else%>
+    <%= text_field_tag "phone_number", "Phone Number" %>
+    <%end%>
   </div>
 
   <%= submit_tag "Create" %>
