--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,19 +1,34 @@
 <h2>Create an Author</h2>
-<%= form_tag authors_path, method: "post" do %>
-  <div class="field">
-    <%= label_tag "name", "Name" %>
-    <%= text_field_tag "name" %>
-  </div>
 
-  <div class="field">
-    <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email" %>
-  </div>
+<ul>
+<% if flash[:message] %>
+  <% flash[:message].each do |e|  %>   
+     <li><%= e %> </li>
+  <%= %> 
+  <%end %>
+  </ul> 
+<%end %>
 
-  <div class="field">
-    <%= label_tag "phone_number", "Phone Number" %>
-    <%= text_field_tag "phone_number" %>
-  </div>
+Use this Form:
 
-  <%= submit_tag "Create" %>
-<% end %>
+<%= form_for @author do |f| %>
+  <div>
+  <%=f.label :name %>
+  <%=f.text_field :name %>
+  </div> 
+  <div>
+  <%=f.label :email %>
+  <%=f.text_field :email %>
+  </div>
+  <div>
+  <%=f.label :phone_number %>
+  <%=f.text_field :phone_number %>
+  </div>
+  <%=f.submit "Create New Author" %>
+  <%end%>
+  <%= %>
+
+<br><br><br>
+
+
+
