--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,25 +1,38 @@
 <h2>Editing "<%= @post.title %>"</h2>
-<%= form_tag post_path(@post), method: "patch" do %>
-  <div class="field">
-    <%= label_tag "title", "Title" %>
-    <%= text_field_tag "title", @post.title %>
-  </div>
 
-  <div class="field">
-    <%= label_tag "category", "Category" %>
-    <p>Must be either "Fiction" or "Non-Fiction".</p>
-    <%= text_field_tag "category", @post.category %>
-    <p>
-      Please type carefully as our top scientists are working around the clock to
-      enable state-of-the-art dropdown technology for this form field.
-    </p>
-  </div>
+<% if flash[:message] %>
+  <ul>
+  <% flash[:message].each do |m| %>
+    <li>
+  <%= m %>
+    </li>
+  <%end %>
+  </ul>
+<%end %>
 
-  <div class="field">
-    <%= label_tag "content", "Content" %>
-    <br />
-    <%= text_area_tag "content", @post.content %>
+<%= form_for @post do |f| %>
+  <div>
+  <%=f.label :title %>
+  <%=f.text_field :title %>
+  </div> 
+  <div>
+  <p>Must be either "Fiction" or "Non-Fiction".</p>
+
+ 
+
+    <%= f.select :category, [['Fiction','Fiction'],['Non-Fiction','Non-Fiction']] %>
+
+  <p>
+  Please type carefully as our top scientists are working around the clock to
+  enable state-of-the-art dropdown technology for this form field.
+  </p>
   </div>
-  <%= submit_tag "Update" %>
-<% end %>
+  <div>
+  <%=f.label :content %>
+  <%=f.text_area :content %>
+  </div>
+  <%=f.submit "Save Post Changes" %>
+  <%end%>
+  <%= %>
+
 
